--- a/sonsruva/package.json
+++ b/sonsruva/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "sonsruva",
+  "name": "sonshruva",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
     "@testing-library/dom": "^10.4.1",
